[tool.poetry]
name = "core_python"
version = "0.1.0"
description = "Python versions of exercises from the CORE Econ textbook"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
jupytext = "^1.13.0"
black-nb = "^0.6"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
