[tool.poetry]
name = "core_python"
version = "0.1.0"
description = "Python versions of exercises from the CORE Econ textbook"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.3"
jupyterlab = "^3.2.1"
matplotlib = "^3.4.3"
openpyxl = "^3.0.9"
pingouin = "^0.5.0"
toml = "^0.10.2"
rich = "^10.15.2"
jupyter = "^1.0.0"
skimpy = "^0.0.10"
black-nb = "^0.7"
regex = "^2022.9.13"
html5lib = "^1.1"
lets-plot = "^3.2.0"

[tool.poetry.dev-dependencies]
jupytext = "^1.13.0"
pre-commit = "^2.15.0"
black = "^22.8.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
watermark = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
